feat(remove/action_relations): remove usage and action_relations
