# pkg/api/model/handler/util.go
@@ -23,13 +23,6 @@ const (
 	SelectionModeAttribute = "attribute"
 )
 
-func convertActionDefaultUsage(usage string) string {
-	if usage == "" {
-		return svctypes.ActionUsageAll
-	}
-	return usage
-}
-
 func convertToRelatedResourceTypes(rrts []relatedResourceType) []svctypes.ActionResourceType {
 	arts := make([]svctypes.ActionResourceType, 0, len(rrts))
 	for _, rrt := range rrts {
